resolve(?) some compilation issues